--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -1,16 +1,11 @@
 #
 # Builds the docs and deploys to GitHub pages
 #
+# Not currently in use
+#
 # https://github.com/actions/setup-node
 # Using https://github.com/marketplace/actions/deploy-to-github-pages
 name: Deploy to Github pages
-
-on:
-  push:
-    #tags:
-    #  - v*
-    #branches:
-    #  - main
 
 jobs:
   deploy_pages:
