--- a/package.json
+++ b/package.json
@@ -7,21 +7,18 @@
   "license": "MIT",
   "keywords": ["data", "resource", "dependency", "solver"],
   "main": "./lib/index.js",
-  "types": "./dist/types.d.ts",
-  "browser": "./index.js",
+  "module": "./es/index.js",
+  "types": "./types.d.ts",
   "scripts": {
-    "cli": "ts-node src/cli.ts",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
     "clean": "rm -rf lib build package dist",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/main.ts",
-    "build": "tsc -p tsconfig.json",
-    "build-all": "yarn clean && yarn build && yarn esbuild-browser && yarn esbuild-browser:dev && yarn build-dts",
+    "build": "tsc",
+    "build-es": "tsc --module ESNext --outDir \"./es/\"",
+    "build-all": "yarn clean && yarn build && yarn build-es && yarn build-dts",
     "build-dts": "api-extractor run",
-    "esbuild-base": "esbuild src/index.ts --bundle --sourcemap=external",
-    "esbuild-browser": "yarn esbuild-base --minify --outfile=dist/data-resource-graph.min.js",
-    "esbuild-browser:dev": "yarn esbuild-base --outfile=dist/data-resource-graph.js",
     "generateGraphVisual": "ts-node src/Test/generateGraphVisual"
   },
   "devDependencies": {
@@ -31,12 +28,10 @@
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "esbuild": "^0.11.11",
     "eslint": "^7.22.0",
     "jest": "^27.5.0",
     "ts-jest": "^27.1.4",
     "ts-node": "^9.1.1",
-    "typedoc": "^0.20.35",
     "typescript": "^4.2.3"
   },
   "dependencies": {
