--- a/package.json
+++ b/package.json
@@ -1,46 +1,37 @@
 {
   "name": "data-resource-graph",
   "version": "0.0.1",
-  "description": "",
+  "description": "An evaluator for complex data dependency graphs",
   "author": "BaseTen",
   "repository": "https://github.com/baseten/data-resource-graph",
   "license": "MIT",
-  "keywords": [],
-  "main": "./dist/tsc/main.js",
-  "types": "./dist/tsc/main.d.ts",
-  "browser": "./dist/esbuild/browser.js",
-  "bin": {
-    "my-cli-tool": "./dist/esbuild/cli.js"
-  },
+  "keywords": ["data", "resource", "dependency", "solver"],
+  "main": "./lib/index.js",
+  "module": "./es/index.js",
+  "types": "./types.d.ts",
   "scripts": {
-    "cli": "ts-node src/cli.ts",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "jest",
-    "clean": "rm -rf dist build package",
+    "clean": "rm -rf lib build package dist",
     "ts-node": "ts-node",
     "docs": "typedoc --entryPoints src/main.ts",
-    "build": "tsc -p tsconfig.json",
-    "build-all": "yarn clean && yarn build && yarn esbuild-node && yarn esbuild-browser",
-    "esbuild-browser": "esbuild src/browser.ts --bundle --minify --sourcemap=external --outfile=dist/esbuild/browser.js",
-    "esbuild-browser:dev": "esbuild src/browser.ts --bundle --outfile=dist/esbuild/browser.js",
-    "esbuild-browser:watch": "esbuild src/browser.ts --bundle --watch --outfile=dist/esbuild/browser.js",
-    "esbuild-node": "esbuild src/cli.ts --bundle --platform=node --minify --sourcemap=external --outfile=dist/esbuild/cli.js",
-    "esbuild-node:dev": "esbuild src/cli.ts --bundle --platform=node --sourcemap=external --outfile=dist/esbuild/cli.js",
-    "esbuild-node:watch": "esbuild src/cli.ts --bundle --platform=node --watch --sourcemap=external --outfile=dist/esbuild/cli.js",
+    "build": "tsc",
+    "build-es": "tsc --module ESNext --outDir \"./es/\"",
+    "build-all": "yarn clean && yarn build && yarn build-es && yarn build-dts",
+    "build-dts": "api-extractor run",
     "generateGraphVisual": "ts-node src/Test/generateGraphVisual"
   },
   "devDependencies": {
+    "@microsoft/api-extractor": "^7.23.1",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.181",
     "@types/node": "^15.0.1",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "@typescript-eslint/parser": "^5.22.0",
-    "esbuild": "^0.11.11",
     "eslint": "^7.22.0",
     "jest": "^27.5.0",
     "ts-jest": "^27.1.4",
     "ts-node": "^9.1.1",
-    "typedoc": "^0.20.35",
     "typescript": "^4.2.3"
   },
   "dependencies": {
