--- a/.github/workflows/lint-and-test.yml
+++ b/.github/workflows/lint-and-test.yml
@@ -22,3 +22,11 @@ jobs:
       - run: yarn test
       - run: yarn lint
       - run: yarn build-all
+      - run: |
+          if [[ $(git status --porcelain) ]]; then
+            echo "Encountered uncommitted files:"
+            git status --porcelain
+            echo ""
+            echo "You may need to run `yarn build-all`, commit any changes, and push again."
+            exit 1
+          fi
